# FPVue_xr

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  main.cpp  pch.h
app/src/main/cpp/mavlink/: mavlink.cpp  mavlink.h  utils.h
app/src/main/cpp/opencv-4.9.0-android-sdk/sdk/: build.gradle.kts
app/src/main/cpp/videonative/: AndroidThreadPrioValues.hpp  UdpReceiver.cpp  UdpReceiver.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlayer.cpp  VideoPlayer.h
app/src/main/cpp/videonative/NALU/: H26X.hpp  KeyFrameFinder.hpp
app/src/main/cpp/videonative/helper/: NDKThreadHelper.hpp  TimeHelper.hpp
app/src/main/cpp/videonative/parser/: RTP.hpp
app/src/main/cpp/wfbngrtl8812/: CMakeLists.txt  RxFrame.cpp  RxFrame.h  WfbngLink.cpp  WfbngLink.hpp  pch.h
app/src/main/cpp/wfbngrtl8812/devourer/src/: Rtl8812aDevice.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
